add input element color picker

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <body>
     <div class="wrapper">
       <div class="toolbar">
-        <a href="#" id="brush" onclick="startDrawing()">
-          <img src="brush-icon.png"/>
-        </a>
+        <input type="color" id="colorPicker" name="brushTool"
+                value="#f6b73c">
+        <label for="brushTool">Choose Color</label>
       </div>
     </div>
     <br/>
