--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
       </div>
     </div>
     <br/>
-    <canvas id="canvas" width="600" height="600">
+    <section>
+      <canvas id="canvas" width="600" height="600">
         Canvas board
-    </canvas>
+      </canvas>
+    </section>
   </body>
 </html>
