--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
                 value="#f6b73c">
         <label for="brushTool">Choose Color</label>
       </div>
+      <button onclick="clearCanvas()">Clear</button> 
     </div>
     <br/>
     <section>
